<resources>
    <string name="app_name">Tusome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="password">Password...</string>
    <string name="email_address">Email Address...</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="no_content_yet">No content yet</string>
</resources>